# Focus-Tracker

./: .gitignore  LICENSE  README.md  app-secrets.example.js  index.html  jira-create.html  main.js  package.json  preload.js  reminder-preload.js  reminder.html  reminder.js  renderer.js  splash-preload.js  splash.html  splash.js  style.css  vite.config.mjs
.github/workflows/: deploy-site.yml  release.yml
renderer/: index.html  landing.html  palette.html  tsconfig.json
renderer/public/: reminder.js  splash.html  splash.js
renderer/src/: App.tsx  index.css  landing.tsx  main.tsx  palette.tsx
renderer/src/components/: BitrixTimemanWidget.tsx  FilterMultiSelect.tsx  (+1 more)
scripts/: assemble-updater-manifest.cjs  assert-version-sync.cjs  create-updater-fragment.cjs  dev.cjs  tauri.cjs
src/: about.js  audio.js  calendar.js  history.js  jira-create.js  kanban.js  lunch.js  notes.js  notifications.js  pomodoro.js  settings.js  state.js  store.js  timer.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bitrix.rs  calendar.rs  config.rs  credentials.rs  jira.rs  jira_templates.rs  kanban.rs  mod.rs  notes.rs  palette.rs  reminder.rs  storage.rs  system.rs  tasks.rs  updates.rs  window.rs
styles/: 01-foundation.css  02-buttons-and-inputs.css  03-kanban.css  04-history.css  05-settings.css  06-dialogs-and-notifications.css  07-calendar.css  08-modes-and-sidepanels.css  09-motion-and-updates.css  10-notes.css  11-misc-overrides.css
(+28 files in other folders)
