[package]
name = "focus-tracker"
version = "1.2.1"
description = "Минималистичный тайм-трекер задач с Pomodoro"
authors = ["katamy"]
edition = "2021"

[lib]
name = "focus_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
base64 = "0.22"
urlencoding = "2"
regex = "1"
opener = "0.7"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
